# Projects_Praktikum

./: README.md
advanced-vector/: main.cpp  vector.h
cppbackend-game-server/: CMakeLists.txt  Dockerfile  README.md  args.txt  conanfile.txt
cppbackend-game-server/data/: README.md  debug.json
cppbackend-game-server/game_app/: application.h  auto_save_manager.h  players.cpp
cppbackend-game-server/game_bots/: bot_ai.h  bot_manager.cpp
cppbackend-game-server/game_db/: dummy.cpp  local_database.h  mock_database.h  repository_impls.h  tagged_uuid.h
cppbackend-game-server/src/: README.md  main.cpp
cppbackend-game-server/src/common/: README.md  boost_logger.cpp  boost_logger.h  cmd_parser.h  constants.h  json_loader.cpp  json_loader.h  main_utils.h  tagged.h  ticker.h  utils.cpp  utils.h
cppbackend-game-server/src/common/game_utils/: README.md  collision_detector.cpp  collision_detector.h  geometry.h  loot_generator.cpp  loot_generator.h
cppbackend-game-server/src/game_app/: README.md  game_clock.h  game_state_persistence.h  player_score_recorder.h  players.h  token.h
cppbackend-game-server/src/game_bots/: README.md  bot_ai.cpp  bot_manager.h
cppbackend-game-server/src/game_db/: README.md  connection_pool.h  database_interface.h  db_migrations.h  player_db.h  pooled_database.h  unit_of_work.h
cppbackend-game-server/src/game_model/: README.md  dog.cpp  dog.h  game_extra_data.h  game_map.h  game_model.cpp  game_model.h  game_session.cpp  game_session.h  loot_storage.cpp  loot_storage.h  road.h
cppbackend-game-server/src/game_model/road_engine/: README.md  road_engine.cpp  road_engine.h  road_graph.cpp  road_graph.h
cppbackend-game-server/src/game_repr/: README.md  game_repr.h  game_session_repr.h  loot_repr.h  players_repr.h
cppbackend-game-server/src/http_server/: README.md  api_handler.cpp  api_handler.h  api_router.cpp  api_router.h  http_response.cpp  http_response.h  http_server.cpp  http_server.h  logging_request_handler.h  request_handler.cpp  request_handler.h  serialize_api.cpp  serialize_api.h
cppbackend-game-server/static/: README.md  index.html
cppbackend-game-server/static/custom-index-data/: main.js  styles.css
cppbackend-game-server/tests/: README.md  collision-detector-tests.cpp  database_tests_local.cpp  game-model-tests.cpp  loot-generator-tests.cpp  state-serialization-tests.cpp  test_database.h
image-converter/: README.md
image-converter/ImgConverter/: main.cpp
image-converter/ImgLib/: CMakeLists.txt  bmp_image.cpp  jpeg_image.cpp
preprocessor/: main.cpp
simple-vector/: array_ptr.h  simple_vector.h
single-linked-list/: single-linked-list.h
spreadsheet/: CMakeLists.txt  FormulaAST.cpp  README.md  cell.cpp  cell.h  common.h  formula.cpp  formula.h  main.cpp  sheet.cpp  sheet.h  test_runner_p.h
transport-catalogue/: README.md  geo.cpp  geo.h  json.cpp  json.h  json_builder.cpp  json_builder.h  json_reader.cpp  json_reader.h  main.cpp  map_renderer.cpp  map_renderer.h  svg.cpp  svg.h  transport_catalogue.cpp  transport_catalogue.h  transport_router.cpp  transport_router.h
